Bug 106672 - Events with duration P1D show up as two days
Summary: Events with duration P1D show up as two days
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 150868 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-06-02 14:45 UTC by Marcus Better
Modified: 2009-01-28 18:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Better 2005-06-02 14:45:54 UTC
Version:            (using KDE KDE 3.4.0)
Installed from:    Debian testing/unstable Packages
OS:                Linux

When importing an iCalendar file (in this case one generated by www.hebcal.com), the day events which have a duration of P1D show up as spanning two days in korganizer: the correct day and also the next one.

When I double-click the event to bring up the details, I can see that the event has different start and end dates (the two consecutive days), which is incorrect.

Here is a simple test file that shows this behaviour:

BEGIN:VCALENDAR
VERSION:2.0
CALSCALE:GREGORIAN
BEGIN:VEVENT
SUMMARY:Test event
DURATION:P1D
DTSTART;VALUE=DATE:20050602
END:VEVENT
END:VCALENDAR
Comment 1 Marcus Better 2005-06-08 14:54:58 UTC
The bug remains in KDE 3.4.1, current Debian experimental packages.
Comment 2 Reinhold Kainhofer 2006-11-02 19:15:05 UTC
Reassigning all KOrganizer bug reports and wishes to the newly created 
korganizer-devel mailing list.
Comment 3 Tom Kliethermes 2007-03-26 04:23:37 UTC
I can confirm this bug still reproduces in KDE 3.5.5 (Kontact 1.2.3).
Comment 4 Jon Eliot Strømme 2007-05-11 10:33:20 UTC
It seems to have been nearly two years - is this difficult or just not popular enough among the voters? Still there in KDE 3.5.6 Korganizer 3.5.6
Comment 5 Christophe Marin 2008-11-17 15:56:42 UTC
*** Bug 150868 has been marked as a duplicate of this bug. ***
Comment 6 Christophe Marin 2008-11-17 16:10:53 UTC
Still reproducible in KDE4 (4.1.73)
Comment 7 Marcus Better 2008-12-04 10:19:34 UTC
*** This bug has been confirmed by popular vote. ***
Comment 8 Sergio Martins 2009-01-28 18:00:51 UTC
SVN commit 917850 by smartins:

Fix Event::dtEnd() so it also returns an inclusive date in case !hasEndDate() && hasDuration().

BUG: 106672



 M  +11 -1     event.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=917850