Fix Event::dtEnd() so it also returns an inclusive date in case !hasEndDate() && hasDuration().

BUG: 106672


svn path=/trunk/KDE/kdepimlibs/; revision=917850